--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "react": "17.0.2",
     "react-native": "0.68.2",
+    "react-native-config": "^1.4.6",
     "react-native-vector-icons": "^9.1.0"
   },
   "devDependencies": {
